// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Profile should show the default user 1`] = `
"<div class=\\"card\\">
  <div class=\\"card-content\\">
    <div class=\\"media\\">
      <div class=\\"media-left\\">
        <figure class=\\"image is-128x128\\"><img src=\\"https://qiita-image-store.s3.amazonaws.com/0/88/profile-images/1512392618\\" alt=\\"Placeholder image\\" data-test=\\"profile-image-url\\"></figure>
      </div>
      <div class=\\"media-content\\">
        <p class=\\"title is-4\\">
          Qiitaキータ
        </p>
        <p class=\\"subtitle is-6\\">
          @
          qiita
        </p>
      </div>
    </div>
    <div class=\\"content\\">
      Qiita公式アカウントです。Qiitaに関するお問い合わせに反応したり、お知らせなどを発信しています。
    </div>
  </div>
</div>"
`;

exports[`components/Profile should show the test user 1`] = `
"<div class=\\"card\\">
  <div class=\\"card-content\\">
    <div class=\\"media\\">
      <div class=\\"media-left\\">
        <figure class=\\"image is-128x128\\"><img src=\\"https://qiita-image-store.s3.amazonaws.com/0/71899/profile-images/1473698980\\" alt=\\"Placeholder image\\" data-test=\\"profile-image-url\\"></figure>
      </div>
      <div class=\\"media-content\\">
        <p class=\\"title is-4\\">
          keita koga
        </p>
        <p class=\\"subtitle is-6\\">
          @
          keitakn
        </p>
      </div>
    </div>
    <div class=\\"content\\">
      よろしくお願いします。
    </div>
  </div>
</div>"
`;
